--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.13.8",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
