--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "react-lap",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
@@ -9,13 +15,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.10.16",
+    "@tanstack/react-query": "^4.36.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.6.5",
-    "babel-plugin-macros": "^3.1.0",
+    "bootstrap": "^5.3.2",
     "moment": "^2.30.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.10.1",
     "react-cookie": "^7.0.1",
     "react-dom": "^17.0.2",
     "react-phone-input-2": "^2.15.1",
@@ -24,12 +32,9 @@
     "react-spinners": "^0.13.8",
     "web-vitals": "^2.1.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+ "devDependencies": {
+  "babel-plugin-macros": "^3.1.0"
+ },
   "eslintConfig": {
     "extends": [
       "react-app",
