--- a/package.json
+++ b/package.json
@@ -26,15 +26,17 @@
     "react-bootstrap": "^2.10.1",
     "react-cookie": "^7.0.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^5.0.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.0",
     "react-spinners": "^0.13.8",
+    "socket.io-client": "^4.7.4",
     "web-vitals": "^2.1.0"
   },
- "devDependencies": {
-  "babel-plugin-macros": "^3.1.0"
- },
+  "devDependencies": {
+    "babel-plugin-macros": "^3.1.0"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
