--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.8.1",
     "moment": "^2.30.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.10.1",
